diesel_compile_tests/tests/fail/belongs_to_missing_parent_import.stderr
error[E0412]: cannot find type `Bar` in this scope
  --> $DIR/belongs_to_missing_parent_import.rs:12:14
   |
12 | #[belongs_to(Bar)]
   |              ^^^ not found in this scope
